Atualizando blog automaticamente

--- a/14-day/02-14-day-flat-belly-reset/index.html
+++ b/14-day/02-14-day-flat-belly-reset/index.html
@@ -40,6 +40,36 @@
       padding-top: 20px;
       border-top: 1px solid #ddd;
     }
+
+    .related-articles {
+  padding: 2rem 0;
+  text-align: center;
+}
+
+.related-articles h2 {
+  color: #0a9396;
+  font-size: 1.5rem;
+  margin-bottom: 1rem;
+}
+
+.products-grid {
+  display: flex;
+  flex-wrap: wrap;
+  justify-content: center;
+  gap: 1rem;
+}
+
+.product-card img {
+  width: 100%;
+  height: auto;
+  display: block;
+}
+
+.product-card {
+  flex: 1 1 45%;  /* Tenta ocupar 45% da largura, mas ajusta conforme o espaço */
+  max-width: 250px;
+}
+
   </style>
 </head>
 <body>
@@ -90,6 +120,25 @@
     <a href="https://706d0d7dl5-63r5ni-8jq2t86s.hop.clickbank.net" class="cta-button">
       Start Your Flat Belly Reset Now →
     </a>
+
+<section class="related-articles">
+<h2>Related Articles</h2>
+<div class="products-grid">
+
+<a href="https://gutcare.fit/14-day/10-community-reset-1200-rebooters" class="product-card" target="_blank">
+<img src="https://imgur.com/Cw2rtfo.jpg" alt="Mosaic of smiling avatars forming a gut shape holding checkmark flags under a You’re Not Alone banner.">
+</a>
+
+<a href="https://gutcare.fit/mitolyn/08-from-foggy-to-focused" class="product-card" target="_blank">
+<img src="https://imgur.com/qVycLvO.jpg" alt="A human brain half-covered in fog, half-crystal clear, with mitochondria forming constellations across the cleared sky.">
+</a>
+
+<a href="https://gutcare.fit/prime-biome/03-confidence-starts-from-your-gut" class="product-card" target="_blank">
+<img src="https://imgur.com/EpDDiTo.jpg" alt="Illustration of a superheroine punching away gas clouds, wearing a capsule belt, against bright rays.">
+</a>
+
+</div>
+</section>
 
     <footer>
       <h3>FAQs</h3>
