--- a/14-day/06-your-ultimate-digestive-toolkit/index.html
+++ b/14-day/06-your-ultimate-digestive-toolkit/index.html
@@ -40,6 +40,36 @@
       padding-top: 20px;
       border-top: 1px solid #ddd;
     }
+
+    .related-articles {
+  padding: 2rem 0;
+  text-align: center;
+}
+
+.related-articles h2 {
+  color: #0a9396;
+  font-size: 1.5rem;
+  margin-bottom: 1rem;
+}
+
+.products-grid {
+  display: flex;
+  flex-wrap: wrap;
+  justify-content: center;
+  gap: 1rem;
+}
+
+.product-card img {
+  width: 100%;
+  height: auto;
+  display: block;
+}
+
+.product-card {
+  flex: 1 1 45%;  /* Tenta ocupar 45% da largura, mas ajusta conforme o espaço */
+  max-width: 250px;
+}
+
   </style>
 </head>
 <body>
@@ -98,6 +128,25 @@
     <a href="https://706d0d7dl5-63r5ni-8jq2t86s.hop.clickbank.net" class="cta-button">
       Download Your Digestive Toolkit Now →
     </a>
+
+<section class="related-articles">
+<h2>Related Articles</h2>
+<div class="products-grid">
+
+<a href="https://gutcare.fit/14-day/05-real-14-day-wins" class="product-card" target="_blank">
+<img src="https://imgur.com/YVNYhV2.jpg" alt="Corkboard with three Polaroid before/after gut reset photos and mood/sleep/energy speech bubbles.">
+</a>
+
+<a href="https://gutcare.fit/mitolyn/06-biohack-your-energy-without-the-crash" class="product-card" target="_blank">
+<img src="https://imgur.com/RtHme48.jpg" alt="A circuit board morphing into a brain with glowing mitochondria pulsing through it.">
+</a>
+
+<a href="https://gutcare.fit/prime-biome/02-why-your-bloated-belly-isnt-fat-its-this" class="product-card" target="_blank">
+<img src="https://imgur.com/aeY02E6.jpg" alt="A lush, peaceful garden shaped like an abstract intestine — made of winding flower paths, leafy arches, and blooming plants. Tiny symbolic “bad bacteria” (drawn like quirky cartoon gremlins.">
+</a>
+
+</div>
+</section>
 
     <footer>
       <h3>FAQs</h3>
