--- a/14-day/07-sneaky-bloat-triggers/index.html
+++ b/14-day/07-sneaky-bloat-triggers/index.html
@@ -40,6 +40,36 @@
       padding-top: 20px;
       border-top: 1px solid #ddd;
     }
+
+    .related-articles {
+  padding: 2rem 0;
+  text-align: center;
+}
+
+.related-articles h2 {
+  color: #0a9396;
+  font-size: 1.5rem;
+  margin-bottom: 1rem;
+}
+
+.products-grid {
+  display: flex;
+  flex-wrap: wrap;
+  justify-content: center;
+  gap: 1rem;
+}
+
+.product-card img {
+  width: 100%;
+  height: auto;
+  display: block;
+}
+
+.product-card {
+  flex: 1 1 45%;  /* Tenta ocupar 45% da largura, mas ajusta conforme o espaço */
+  max-width: 250px;
+}
+
   </style>
 </head>
 <body>
@@ -104,6 +134,25 @@
     <a href="https://706d0d7dl5-63r5ni-8jq2t86s.hop.clickbank.net" class="cta-button">
       Start Your 14‑Day Gut Reset Now
     </a>
+
+<section class="related-articles">
+<h2>Related Articles</h2>
+<div class="products-grid">
+
+<a href="https://gutcare.fit/14-day/04-why-day4-gut-gamechanger" class="product-card" target="_blank">
+<img src="https://imgur.com/R9ll0WW.jpg" alt="Leafy plant stopwatch set to 4 with cheering gut cells and confetti of fruits and veggies.">
+</a>
+
+<a href="https://gutcare.fit/mitolyn/07-the-weight-loss-plan-that-starts-in-your-cells" class="product-card" target="_blank">
+<img src="https://imgur.com/CzXBVoP.jpg" alt="A calendar flipping with tiny mitochondria growing stronger each month.">
+</a>
+
+<a href="https://gutcare.fit/prime-biome/09-feel-light-again-from-the-soil-up" class="product-card" target="_blank">
+<img src="https://imgur.com/9sAohQn.jpg" alt="Illustration of a butterfly made from leaves and roots rising from a vibrant spiral of soil, symbolizing gut healing and digestive freedom through soil-based probiotics. Bright, airy background evokes lightness and relief.">
+</a>
+
+</div>
+</section>
 
     <footer>
       <h3>FAQs</h3>
