--- a/14-day/08-quiet-your-gut-quiet-your-mind/index.html
+++ b/14-day/08-quiet-your-gut-quiet-your-mind/index.html
@@ -25,6 +25,36 @@
     img { max-width:100%; height:auto; display:block; margin:20px auto; }
     .benefits { list-style:disc; margin:10px 0 20px 20px; }
     footer { font-size:0.9em; color:#555; margin-top:40px; padding-top:20px; border-top:1px solid #ddd; }
+
+    .related-articles {
+  padding: 2rem 0;
+  text-align: center;
+}
+
+.related-articles h2 {
+  color: #0a9396;
+  font-size: 1.5rem;
+  margin-bottom: 1rem;
+}
+
+.products-grid {
+  display: flex;
+  flex-wrap: wrap;
+  justify-content: center;
+  gap: 1rem;
+}
+
+.product-card img {
+  width: 100%;
+  height: auto;
+  display: block;
+}
+
+.product-card {
+  flex: 1 1 45%;  /* Tenta ocupar 45% da largura, mas ajusta conforme o espaço */
+  max-width: 250px;
+}
+
   </style>
 </head>
 <body>
@@ -84,6 +114,25 @@
     </ul>
 
     <a href="https://706d0d7dl5-63r5ni-8jq2t86s.hop.clickbank.net" class="cta-button">Start Your 14‑Day Reboot Now</a>
+
+<section class="related-articles">
+<h2>Related Articles</h2>
+<div class="products-grid">
+
+<a href="https://gutcare.fit/14-day/07-sneaky-bloat-triggers" class="product-card" target="_blank">
+<img src="https://imgur.com/Pm4nfCB.jpg" alt="Whack‑a‑mole board of nuts and nightshades labeled bloat being tapped by probiotic hammer, with fresh swaps around.">
+</a>
+
+<a href="https://gutcare.fit/mitolyn/04-i-didnt-change-my-diet" class="product-card" target="_blank">
+<img src="https://imgur.com/kn2chTf.jpg" alt="A person stepping out of a shadowy version of themselves into a lighter, slimmer version made of glowing circuitry and leaves.">
+</a>
+
+<a href="https://gutcare.fit/prime-biome/08-youthful-energy-from-within" class="product-card" target="_blank">
+<img src="https://imgur.com/Evn9ylp.jpg" alt="Hourglass with gut‑shaped sand flowing upward and glowing capsule, symbolizing rejuvenation.">
+</a>
+
+</div>
+</section>
 
     <footer>
       <h3>FAQs</h3>
