--- a/14-day/09-top-5-qa-digestive-reset/index.html
+++ b/14-day/09-top-5-qa-digestive-reset/index.html
@@ -26,6 +26,36 @@
     .benefits { list-style:disc; margin:10px 0 20px 20px; }
     .faq-question { font-weight:bold; margin-top:20px; }
     footer { font-size:0.9em; color:#555; margin-top:40px; padding-top:20px; border-top:1px solid #ddd; }
+
+    .related-articles {
+  padding: 2rem 0;
+  text-align: center;
+}
+
+.related-articles h2 {
+  color: #0a9396;
+  font-size: 1.5rem;
+  margin-bottom: 1rem;
+}
+
+.products-grid {
+  display: flex;
+  flex-wrap: wrap;
+  justify-content: center;
+  gap: 1rem;
+}
+
+.product-card img {
+  width: 100%;
+  height: auto;
+  display: block;
+}
+
+.product-card {
+  flex: 1 1 45%;  /* Tenta ocupar 45% da largura, mas ajusta conforme o espaço */
+  max-width: 250px;
+}
+
   </style>
 </head>
 <body>
@@ -66,6 +96,25 @@
     </ul>
 
     <a href="https://706d0d7dl5-63r5ni-8jq2t86s.hop.clickbank.net" class="cta-button">Get the 14‑Day Reboot & FAQs Guide Now</a>
+
+<section class="related-articles">
+<h2>Related Articles</h2>
+<div class="products-grid">
+
+<a href="https://gutcare.fit/14-day/02-14-day-flat-belly-reset" class="product-card" target="_blank">
+<img src="https://imgur.com/ZibFf4c.jpg" alt="A cheerful suitcase at an airport security checkpoint, going through the scanner. Instead of clothes, the suitcase is packed with mint leaves, tiny dancing probiotics, a smiling gut mascot, and a “14-Day Reset” boarding pass sticking out. The airport scanner screen shows a flat, glowing belly outline with sparkles — approved for takeoff! The vibe is whimsical, clever, and symbolic of a “light, no-diet” transformation journey.">
+</a>
+
+<a href="https://gutcare.fit/mitolyn/09-your-metabolism-has-a-switch" class="product-card" target="_blank">
+<img src="https://imgur.com/U6BJarG.jpg" alt="A giant power switch labeled “Metabolism” being flipped by a glowing mitochondrion.">
+</a>
+
+<a href="https://gutcare.fit/prime-biome/04-3-gut-signals-ignoring" class="product-card" target="_blank">
+<img src="https://imgur.com/Yxi2w5t.jpg" alt="Three warning icons above gut graphic connected to a capsule, illustrating ignored gut signals.">
+</a>
+
+</div>
+</section>
 
     <footer>
       <h3>FAQs & Medical Note</h3>
