--- a/14-day/10-community-reset-1200-rebooters/index.html
+++ b/14-day/10-community-reset-1200-rebooters/index.html
@@ -25,6 +25,36 @@
     img { max-width:100%; height:auto; display:block; margin:20px auto; }
     .benefits { list-style:disc; margin:10px 0 20px 20px; }
     footer { font-size:0.9em; color:#555; margin-top:40px; padding-top:20px; border-top:1px solid #ddd; }
+
+    .related-articles {
+  padding: 2rem 0;
+  text-align: center;
+}
+
+.related-articles h2 {
+  color: #0a9396;
+  font-size: 1.5rem;
+  margin-bottom: 1rem;
+}
+
+.products-grid {
+  display: flex;
+  flex-wrap: wrap;
+  justify-content: center;
+  gap: 1rem;
+}
+
+.product-card img {
+  width: 100%;
+  height: auto;
+  display: block;
+}
+
+.product-card {
+  flex: 1 1 45%;  /* Tenta ocupar 45% da largura, mas ajusta conforme o espaço */
+  max-width: 250px;
+}
+
   </style>
 </head>
 <body>
@@ -81,6 +111,25 @@
     </ul>
 
     <a href="https://706d0d7dl5-63r5ni-8jq2t86s.hop.clickbank.net" class="cta-button">Join the 1,200+ Community Rebooters Now</a>
+
+  <section class="related-articles">
+<h2>Related Articles</h2>
+<div class="products-grid">
+
+<a href="https://gutcare.fit/14-day/01-ditch-fads-embrace-real-results" class="product-card" target="_blank">
+<img src="https://imgur.com/r6Ds2Ng.jpg" alt="Person removing posters of fad diets from wall to reveal blooming greens and probiotics.">
+</a>
+
+<a href="https://gutcare.fit/mitolyn/01-unlock-your-bodys-real-fat-burning-power" class="product-card" target="_blank">
+<img src="https://imgur.com/SXAzKg7.jpg" alt="A woman silhouette with radiant mitochondria inside, lighting up the torso like glowing embers.">
+</a>
+
+<a href="https://gutcare.fit/prime-biome/07-7‑day-primebiome-experiment/" class="product-card" target="_blank">
+<img src="https://imgur.com/W2mxLzR.jpg" alt="Lab notebook with gut data charts and Primebiome capsule markers on days 1 and 7.">
+</a>
+
+</div>
+</section>
 
     <footer>
       <h3>FAQs</h3>
