--- a/Mitolyn/07-the-weight-loss-plan-that-starts-in-your-cells/index.html
+++ b/Mitolyn/07-the-weight-loss-plan-that-starts-in-your-cells/index.html
@@ -1,19 +1,19 @@
 <!DOCTYPE html>
 <html lang="en">
 <head>
-  <meta charset="UTF-8">
-  <meta name="viewport" content="width=device-width, initial-scale=1.0">
-  <meta name="pinterest-rich-pin" content="true">
-  <meta property="og:type" content="article">
-  <meta property="product:price:amount" content="79">
-  <meta property="product:price:currency" content="USD">
-  <meta property="product:availability" content="in_stock">
-  <meta property="product:retailer_item_id" content="MITOLYN-01">
-  <meta property="og:title" content="How I Beat the Afternoon Slump Without Sugar or Coffee">
-  <meta property="og:description" content="⏰ Tired at 3 PM every day? It’s not just stress—it’s mitochondrial fatigue. Mitolyn users say they feel focused and energized all afternoon without sugar crashes or caffeine. Try a smarter solution.">
-  <meta property="og:image" content="https://imgur.com/RmFYNL0.png">
-  <meta property="og:url" content="https://gutcare.fit/mitolyn/07-the-weight-loss-plan-that-starts-in-your-cells">
-  <title>How I Beat the Afternoon Slump Without Sugar or Coffee</title>
+  <meta charset="UTF-8" />
+  <meta name="viewport" content="width=device-width, initial-scale=1.0" />
+  <meta name="pinterest-rich-pin" content="true" />
+  <meta property="og:type" content="article" />
+  <meta property="product:price:amount" content="79" />
+  <meta property="product:price:currency" content="USD" />
+  <meta property="product:availability" content="in_stock" />
+  <meta property="product:retailer_item_id" content="MITOLYN-01" />
+  <meta property="og:title" content="The Weight Loss Plan That Starts in Your Cells" />
+  <meta property="og:description" content="Forget crash diets. Mitolyn supports fat loss at the cellular level by repairing mitochondria and fueling energy production. Your results won’t be fast—they’ll be real." />
+  <meta property="og:image" content="https://imgur.com/RmFYNL0.png" />
+  <meta property="og:url" content="https://gutcare.fit/mitolyn/07-the-weight-loss-plan-that-starts-in-your-cells" />
+  <title>The Weight Loss Plan That Starts in Your Cells</title>
   <style>
     body {
       background-color: #ffdca2;
@@ -55,6 +55,30 @@
       content: "\1F525 ";
       margin-right: 0.5rem;
     }
+    .related-articles {
+      padding: 2rem 0;
+      text-align: center;
+    }
+    .related-articles h2 {
+      color: #561b28;
+      font-size: 1.5rem;
+      margin-bottom: 1rem;
+    }
+    .products-grid {
+      display: flex;
+      flex-wrap: wrap;
+      justify-content: center;
+      gap: 1rem;
+    }
+    .product-card img {
+      width: 100%;
+      height: auto;
+      display: block;
+    }
+    .product-card {
+      flex: 1 1 45%;
+      max-width: 250px;
+    }
     footer {
       margin-top: 4rem;
       font-size: 0.9rem;
@@ -64,81 +88,97 @@
 </head>
 <body>
   <div class="container">
-    <a href="https://b962934ee0687le6yjqj678l4f.hop.clickbank.net">
-      <img src="https://imgur.com/Da4RL6V.jpg" alt="Gut Care Fitness Logo" loading="lazy" class="center" style="width: 33%;">
+    <a href="https://b962934ee0687le6yjqj678l4f.hop.clickbank.net" target="_blank">
+      <img src="https://imgur.com/Da4RL6V.jpg" alt="Gut Care Fitness Logo" loading="lazy" class="center" style="width: 33%;" />
     </a>
 
-    <h1>How I Beat the Afternoon Slump Without Sugar or Coffee</h1>
-
-    <a href="https://b962934ee0687le6yjqj678l4f.hop.clickbank.net">
-      <img src="https://imgur.com/ZaMzdJg.jpg" alt="A before-after scene: on the left, slumped posture and dark circles; on the right, upright and glowing, with mitochondria floating like balloons." loading="lazy" class="center" style="width: 100%; max-width: 700px;">
-    </a>
-
-    <p>We all know that 3 PM crash—when your brain gets foggy, your posture slumps, and sugar or coffee feels like the only answer. But what if the cause isn’t just stress or poor sleep... but <strong>mitochondrial fatigue</strong>?</p>
-
-    <h2>The Hidden Cause of Afternoon Fatigue</h2>
-    <p>Your mitochondria are responsible for creating cellular energy (ATP). As we age or deal with stress, inflammation, or poor diet, these energy factories slow down. That’s when you hit that slump—and most "solutions" only mask it. <a href="https://pubmed.ncbi.nlm.nih.gov/" target="_blank">Harvard-backed research</a> shows that mitochondrial support can restore energy at the source.</p>
-
-    <h2>Why Mitolyn Works</h2>
-    <p>Mitolyn is a science-backed formula designed to recharge your body’s natural energy without caffeine or stimulants. It helps keep your energy curve smooth and sustainable:</p>
-    <ul>
-      <li><strong>Maqui Berry Extract</strong>: antioxidant-rich and NAD+ supportive <a href="https://pubmed.ncbi.nlm.nih.gov/31354109/" target="_blank">(PubMed)</a>.</li>
-      <li><strong>Rhodiola Rosea</strong>: adaptogen that supports stamina and stress relief <a href="https://pubmed.ncbi.nlm.nih.gov/35745023/" target="_blank">(PubMed)</a>.</li>
-      <li><strong>Astaxanthin</strong>: cellular protection and inflammation balance <a href="https://pubmed.ncbi.nlm.nih.gov/35946443/" target="_blank">(PubMed)</a>.</li>
-      <li><strong>CoQ10 + PQQ</strong>: essential cofactors for ATP production and mitochondrial regeneration.</li>
-    </ul>
-
-    <h2>Real People, Real Energy</h2>
-    <p><strong>Day 30:</strong> Clearer focus through the afternoon.<br>
-       <strong>Day 60:</strong> No more dependency on afternoon caffeine.<br>
-       <strong>Day 90:</strong> More motivation, productivity, and calm energy.</p>
+    <h1>The Weight Loss Plan That Starts in Your Cells</h1>
 
     <a href="https://b962934ee0687le6yjqj678l4f.hop.clickbank.net" target="_blank">
-      <img src="https://imgur.com/PNhGDDO.jpg" alt="A young happy athletic woman feeling motivated while running beach" loading="lazy" class="center" style="width: 100%; max-width: 700px;">
+      <img src="https://imgur.com/CzXBVoP.jpg" alt="A calendar flipping with tiny mitochondria growing stronger each month." loading="lazy" class="center" style="width: 100%; max-width: 700px;" />
+    </a>
+
+    <p>How many times have you tried to lose weight the hard way? Restrictive diets, intense workouts, “miracle” detox teas? Here’s what no one tells you: true fat loss starts deep in your <strong>cells</strong>. Specifically, in the tiny power factories called <em>mitochondria</em>.</p>
+
+    <h2>Why Mitochondria Matter for Fat Loss</h2>
+    <p>Mitochondria generate ATP, your body’s energy currency. When they’re impaired (by age, stress, poor diet), energy output drops—and so does your metabolism. <a href="https://pubmed.ncbi.nlm.nih.gov/32060542/" target="_blank">Clinical research</a> links mitochondrial dysfunction to slower fat burn and insulin resistance.</p>
+
+    <h2>Mitolyn: The Cellular Reboot Supplement</h2>
+    <p>Mitolyn helps repair and reactivate mitochondria, supporting fat loss without drastic lifestyle changes. Its science-backed ingredients include:</p>
+    <ul>
+      <li><strong>Maqui Berry Extract</strong>: Boosts NAD+, supports detox and metabolism <a href="https://pubmed.ncbi.nlm.nih.gov/31354109/" target="_blank">(PubMed)</a>.</li>
+      <li><strong>Rhodiola Rosea</strong>: Enhances stamina and modulates cortisol <a href="https://pubmed.ncbi.nlm.nih.gov/35745023/" target="_blank">(PubMed)</a>.</li>
+      <li><strong>Astaxanthin</strong>: Fights oxidative stress and supports mitochondrial protection <a href="https://pubmed.ncbi.nlm.nih.gov/35946443/" target="_blank">(PubMed)</a>.</li>
+      <li><strong>CoQ10 + PQQ</strong>: Essential for mitochondrial biogenesis and energy.</li>
+    </ul>
+
+    <h2>Timeline: What Users Report</h2>
+    <p><strong>Week 2:</strong> Less bloating and more stable energy.<br />
+       <strong>Week 5:</strong> Easier fat loss, better digestion, less cravings.<br />
+       <strong>Week 8–10:</strong> Noticeable body changes, improved mood, and metabolism you can feel.</p>
+
+    <a href="https://b962934ee0687le6yjqj678l4f.hop.clickbank.net" target="_blank">
+      <img src="https://imgur.com/iyzo2P0.jpg" alt="Strong young woman ready training." loading="lazy" class="center" style="width: 100%; max-width: 700px;" />
     </a>
 
     <h2>Who Is Mitolyn For?</h2>
-    <p>✅ Anyone who feels tired or unfocused by mid-afternoon.<br>
-    ❌ Not for pregnant/nursing individuals or those with medical conditions without supervision.</p>
+    <p>✅ Those tired of yo-yo dieting or plateaued weight<br />
+       ✅ Anyone with low energy, slow digestion, or inflammation<br />
+       ❌ Not for pregnant people or those on blood thinners (consult your doctor)</p>
 
     <h3>Pros</h3>
     <ul>
-      <li>Smooth energy without caffeine or sugar</li>
-      <li>Backed by scientific research</li>
-      <li>Made in FDA‑GMP certified US facilities</li>
-      <li>60-day risk-free guarantee</li>
+      <li>Targets metabolism from the inside out</li>
+      <li>Non-stimulant formula, no crashes</li>
+      <li>Manufactured in FDA-GMP facilities</li>
+      <li>Backed by science and real user results</li>
     </ul>
 
     <h3>Cons</h3>
     <ul>
-      <li>Not instant—takes 2 to 8 weeks of consistent use</li>
-      <li>Only available through official site</li>
-      <li>Premium price reflects clinical ingredients</li>
+      <li>Gradual progress—not a “quick fix”</li>
+      <li>Requires consistency (daily use)</li>
+      <li>Only available online</li>
     </ul>
 
-    <h2>⚠️ Important Notice</h2>
-    <p>Mitolyn is often imitated, but results depend on formula quality. Always order from the <a href="https://b962934ee0687le6yjqj678l4f.hop.clickbank.net"><strong>official Mitolyn website</strong></a>.</p>
+    <h2>⚠️ Don’t Fall for Copycats</h2>
+    <p>Due to Mitolyn’s success, fake products are flooding the internet. For guaranteed results and safety, buy only from the <a href="https://b962934ee0687le6yjqj678l4f.hop.clickbank.net" target="_blank"><strong>official site here</strong></a>.</p>
 
-    <a href="https://b962934ee0687le6yjqj678l4f.hop.clickbank.net">
-      <img src="https://imgur.com/RmFYNL0.png" alt="Mitolyn official verified product seal" loading="lazy" class="center" style="width: 50%;">
+    <a href="https://b962934ee0687le6yjqj678l4f.hop.clickbank.net" target="_blank">
+      <img src="https://imgur.com/RmFYNL0.png" alt="Mitolyn certified badge" loading="lazy" class="center" style="width: 50%;" />
     </a>
 
-    <a href="https://b962934ee0687le6yjqj678l4f.hop.clickbank.net" class="btn">👉 Beat the Slump — Energize With Mitolyn</a>
+    <a href="https://b962934ee0687le6yjqj678l4f.hop.clickbank.net" target="_blank" class="btn">👉 Activate Your Cellular Fat Burn with Mitolyn</a>
 
-    <h2>Benefits You Can Expect</h2>
+    <h2>Mitolyn Benefits Summary</h2>
     <ul>
-      <li>Stable energy across your workday</li>
-      <li>Improved motivation and focus</li>
-      <li>Balanced mood and mental clarity</li>
-      <li>No need for sugar or coffee to stay productive</li>
-      <li>Cellular-level vitality and recovery</li>
+      <li>Support mitochondrial repair and ATP</li>
+      <li>Improve fat metabolism naturally</li>
+      <li>Reduce cravings and inflammation</li>
+      <li>Boost energy, clarity, and sleep</li>
+      <li>No stimulants or extreme dieting</li>
     </ul>
 
+    <section class="related-articles">
+      <h2>Related Articles</h2>
+      <div class="products-grid">
+        <a href="https://gutcare.fit/mitolyn/09-your-metabolism-has-a-switch" class="product-card" target="_blank">
+          <img src="https://imgur.com/U6BJarG.jpg" alt="A lush garden shaped like an abstract intestine and tiny bad bacteria drawn like quirky cartoon gremlins." />
+        </a>
+        <a href="https://gutcare.fit/prime-biome/04-3-gut-signals-ignoring" class="product-card" target="_blank">
+          <img src="https://imgur.com/Yxi2w5t.jpg" alt="Three warning icons above gut graphic connected to a capsule, illustrating ignored gut signals." />
+        </a>
+        <a href="https://gutcare.fit/14-day/02-14-day-flat-belly-reset" class="product-card" target="_blank">
+          <img src="https://imgur.com/ZibFf4c.jpg" alt="A cheerful suitcase at an airport security checkpoint, going through the scanner. Instead of clothes, the suitcase is packed with mint leaves, tiny dancing probiotics, a smiling gut mascot, and a 14-Day Reset boarding pass sticking out. The airport scanner screen shows a flat, glowing belly outline with sparkles — approved for takeoff!" />
+        </a>
+      </div>
+    </section>
+
     <footer>
-      <h3>FAQ & Disclaimers</h3>
-      <p><strong>Medical disclaimer:</strong> Always consult a healthcare provider before using any supplement.</p>
-      <p><strong>How soon does it work?</strong> Most people feel results between 2–8 weeks with regular use.</p>
-      <p><strong>Safety:</strong> Mitolyn is manufactured in FDA-GMP compliant US labs for quality assurance.</p>
+      <h3>FAQ & Disclaimer</h3>
+      <p><strong>This article is not medical advice.</strong> Always consult your doctor before starting a supplement.</p>
+      <p><strong>How long until results?</strong> Most see measurable changes between 4 and 8 weeks.</p>
+      <p><strong>Where is Mitolyn made?</strong> In the USA, at FDA-GMP certified facilities.</p>
     </footer>
   </div>
 </body>
