--- a/prime-biome/09-feel-light-again-from-the-soil-up/index.html
+++ b/prime-biome/09-feel-light-again-from-the-soil-up/index.html
@@ -69,6 +69,36 @@
     a {
       color: #00e0ff;
     }
+
+    .related-articles {
+  padding: 2rem 0;
+  text-align: center;
+}
+
+.related-articles h2 {
+  color: #fcd34d;
+  font-size: 1.5rem;
+  margin-bottom: 1rem;
+}
+
+.products-grid {
+  display: flex;
+  flex-wrap: wrap;
+  justify-content: center;
+  gap: 1rem;
+}
+
+.product-card img {
+  width: 100%;
+  height: auto;
+  display: block;
+}
+
+.product-card {
+  flex: 1 1 45%;  /* Tenta ocupar 45% da largura, mas ajusta conforme o espaço */
+  max-width: 300px;
+}
+
   </style>
 </head>
 <body>
@@ -131,6 +161,25 @@
       <img src="https://imgur.com/Sfv2abx.jpg" alt="PrimeBiome bottles with satisfaction guarantee banner" class="final-image" loading="lazy" />
     </a>
   </main>
+
+<section class="related-articles">
+<h2>Related Articles</h2>
+<div class="products-grid">
+
+<a href="https://gutcare.fit/prime-biome/08-youthful-energy-from-within" class="product-card" target="_blank">
+<img src="https://imgur.com/Evn9ylp.jpg" alt="Hourglass with gut‑shaped sand flowing upward and glowing capsule, symbolizing rejuvenation.">
+</a>
+
+<a href="https://gutcare.fit/mitolyn/09-your-metabolism-has-a-switch" class="product-card" target="_blank">
+<img src="https://imgur.com/U6BJarG.jpg" alt="A giant power switch labeled “Metabolism” being flipped by a glowing mitochondrion.">
+</a>
+
+<a href="https://gutcare.fit/14-day/02-14-day-flat-belly-reset" class="product-card" target="_blank">
+<img src="https://imgur.com/ZibFf4c.jpg" alt="A cheerful suitcase at an airport security checkpoint, going through the scanner. Instead of clothes, the suitcase is packed with mint leaves, tiny dancing probiotics, a smiling gut mascot, and a “14-Day Reset” boarding pass sticking out. The airport scanner screen shows a flat, glowing belly outline with sparkles — approved for takeoff! The vibe is whimsical, clever, and symbolic of a “light, no-diet” transformation journey.">
+</a>
+
+</div>
+</section>
 
   <footer>
     <h3>FAQs & Disclaimer</h3>
