--- a/14-day/01-ditch-fads-embrace-real-results/index.html
+++ b/14-day/01-ditch-fads-embrace-real-results/index.html
@@ -40,6 +40,36 @@
       padding-top: 20px;
       border-top: 1px solid #ddd;
     }
+
+    .related-articles {
+  padding: 2rem 0;
+  text-align: center;
+}
+
+.related-articles h2 {
+  color: #0a9396;
+  font-size: 1.5rem;
+  margin-bottom: 1rem;
+}
+
+.products-grid {
+  display: flex;
+  flex-wrap: wrap;
+  justify-content: center;
+  gap: 1rem;
+}
+
+.product-card img {
+  width: 100%;
+  height: auto;
+  display: block;
+}
+
+.product-card {
+  flex: 1 1 45%;  /* Tenta ocupar 45% da largura, mas ajusta conforme o espaço */
+  max-width: 250px;
+}
+
   </style>
 </head>
 <body>
@@ -93,6 +123,25 @@
     <a href="https://706d0d7dl5-63r5ni-8jq2t86s.hop.clickbank.net" class="cta-button">
       Try the 14‑Day Reboot for Real Results →
     </a>
+
+<section class="related-articles">
+<h2>Related Articles</h2>
+<div class="products-grid">
+
+<a href="https://gutcare.fit/14-day/09-top-5-qa-digestive-reset" class="product-card" target="_blank">
+<img src="https://imgur.com/7YwykfF.jpg" alt="Speech bubbles with Q&A snippets above gut icon connected by vine‑like probiotic strands.">
+</a>
+
+<a href="https://gutcare.fit/mitolyn/02-undercharged-body" class="product-card" target="_blank">
+<img src="https://imgur.com/nOmBltb.jpg" alt="A smartphone icon with a 1% battery symbol, transitioning to 100% powered by glowing mitochondria.">
+</a>
+
+<a href="https://gutcare.fit/prime-biome/01-lions-mane-benefits" class="product-card" target="_blank">
+<img src="https://imgur.com/D9btGay.jpg" alt="Whimsical flat illustration of a lion with a mushroom-shaped mane, representing the brain and body benefits of Lion’s Mane supplement.">
+</a>
+
+</div>
+</section>
 
     <footer>
       <h3>FAQs</h3>
