--- a/Mitolyn/02-undercharged-body/index.html
+++ b/Mitolyn/02-undercharged-body/index.html
@@ -12,7 +12,7 @@
   <meta property="og:title" content="Your Body Isn’t Broken. It’s Just Undercharged">
   <meta property="og:description" content="You’re not lazy. You’re low-energy at the cellular level. Mitolyn restores mitochondrial function so your body can finally show up fully. 🔋 Empower your real potential.">
   <meta property="og:image" content="https://imgur.com/RmFYNL0.png">
-  <meta property="og:url" content="https://gutcare.fit/mitolyn/01-unlock-your-bodys-real-fat-burning-power">
+  <meta property="og:url" content="https://gutcare.fit/mitolyn/02-undercharged-body">
   <title>Your Body Isn’t Broken. It’s Just Undercharged</title>
   <style>
     body {
@@ -60,6 +60,36 @@
       font-size: 0.9rem;
       color: #000000;
     }
+
+    .related-articles {
+  padding: 2rem 0;
+  text-align: center;
+}
+
+.related-articles h2 {
+  color: #561b28;
+  font-size: 1.5rem;
+  margin-bottom: 1rem;
+}
+
+.products-grid {
+  display: flex;
+  flex-wrap: wrap;
+  justify-content: center;
+  gap: 1rem;
+}
+
+.product-card img {
+  width: 100%;
+  height: auto;
+  display: block;
+}
+
+.product-card {
+  flex: 1 1 45%;  /* Tenta ocupar 45% da largura, mas ajusta conforme o espaço */
+  max-width: 250px;
+}
+
   </style>
 </head>
 <body>
@@ -133,6 +163,25 @@
       <li>Better sleep, better digestion</li>
       <li>Protection from oxidative stress</li>
     </ul>
+
+<section class="related-articles">
+<h2>Related Articles</h2>
+<div class="products-grid">
+
+<a href="https://gutcare.fit/mitolyn/08-from-foggy-to-focused" class="product-card" target="_blank">
+<img src="https://imgur.com/qVycLvO.jpg" alt="A human brain half-covered in fog, half-crystal clear, with mitochondria forming constellations across the cleared sky.">
+</a>
+
+<a href="https://gutcare.fit/prime-biome/03-confidence-starts-from-your-gut" class="product-card" target="_blank">
+<img src="https://imgur.com/EpDDiTo.jpg" alt="Illustration of a superheroine punching away gas clouds, wearing a capsule belt, against bright rays.">
+</a>
+
+<a href="https://gutcare.fit/14-day/10-community-reset-1200-rebooters" class="product-card" target="_blank">
+<img src="https://imgur.com/Cw2rtfo.jpg" alt="Mosaic of smiling avatars forming a gut shape holding checkmark flags under a You’re Not Alone banner.">
+</a>
+
+</div>
+</section>
 
     <footer>
       <h3>FAQ & Disclaimers</h3>
