--- a/Mitolyn/06-biohack-your-energy-without-the-crash/index.html
+++ b/Mitolyn/06-biohack-your-energy-without-the-crash/index.html
@@ -60,6 +60,36 @@
       font-size: 0.9rem;
       color: #000000;
     }
+
+    .related-articles {
+  padding: 2rem 0;
+  text-align: center;
+}
+
+.related-articles h2 {
+  color: #561b28;
+  font-size: 1.5rem;
+  margin-bottom: 1rem;
+}
+
+.products-grid {
+  display: flex;
+  flex-wrap: wrap;
+  justify-content: center;
+  gap: 1rem;
+}
+
+.product-card img {
+  width: 100%;
+  height: auto;
+  display: block;
+}
+
+.product-card {
+  flex: 1 1 45%;  /* Tenta ocupar 45% da largura, mas ajusta conforme o espaço */
+  max-width: 250px;
+}
+
   </style>
 </head>
 <body>
@@ -134,6 +164,25 @@
       <li>Enhanced stamina and recovery</li>
       <li>Support for brain, heart, and metabolism</li>
     </ul>
+
+<section class="related-articles">
+<h2>Related Articles</h2>
+<div class="products-grid">
+
+<a href="https://gutcare.fit/mitolyn/05-how-i-beat-the-afternoon-slump-without-sugar-or-coffee" class="product-card" target="_blank">
+<img src="https://imgur.com/ZaMzdJg.jpg" alt="A before-after scene: on the left, slumped posture and dark circles; on the right, upright and glowing, with mitochondria floating like balloons.">
+</a>
+
+<a href="https://gutcare.fit/prime-biome/02-why-your-bloated-belly-isnt-fat-its-this" class="product-card" target="_blank">
+<img src="https://imgur.com/aeY02E6.jpg" alt="A lush, peaceful garden shaped like an abstract intestine — made of winding flower paths, leafy arches, and blooming plants. Tiny symbolic “bad bacteria” (drawn like quirky cartoon gremlins.">
+</a>
+
+<a href="https://gutcare.fit/14-day/06-your-ultimate-digestive-toolkit" class="product-card" target="_blank">
+<img src="https://imgur.com/Embo30b.jpg" alt="Open toolbox overflowing with recipe cards, veggies, clipboard checklist and probiotic bottle, glowing with green sparkles.">
+</a>
+
+</div>
+</section>
 
     <footer>
       <h3>FAQ & Disclaimers</h3>
