--- a/Mitolyn/08-from-foggy-to-focused/index.html
+++ b/Mitolyn/08-from-foggy-to-focused/index.html
@@ -60,6 +60,36 @@
       font-size: 0.9rem;
       color: #000000;
     }
+
+    .related-articles {
+  padding: 2rem 0;
+  text-align: center;
+}
+
+.related-articles h2 {
+  color: #561b28;
+  font-size: 1.5rem;
+  margin-bottom: 1rem;
+}
+
+.products-grid {
+  display: flex;
+  flex-wrap: wrap;
+  justify-content: center;
+  gap: 1rem;
+}
+
+.product-card img {
+  width: 100%;
+  height: auto;
+  display: block;
+}
+
+.product-card {
+  flex: 1 1 45%;  /* Tenta ocupar 45% da largura, mas ajusta conforme o espaço */
+  max-width: 250px;
+}
+
   </style>
 </head>
 <body>
@@ -134,6 +164,25 @@
       <li>Support for healthy aging of the brain</li>
       <li>Clean, natural neuro-energy</li>
     </ul>
+
+<section class="related-articles">
+<h2>Related Articles</h2>
+<div class="products-grid">
+
+<a href="https://gutcare.fit/mitolyn/04-i-didnt-change-my-diet" class="product-card" target="_blank">
+<img src="https://imgur.com/kn2chTf.jpg" alt="A person stepping out of a shadowy version of themselves into a lighter, slimmer version made of glowing circuitry and leaves.">
+</a>
+
+<a href="https://gutcare.fit/prime-biome/08-youthful-energy-from-within" class="product-card" target="_blank">
+<img src="https://imgur.com/Evn9ylp.jpg" alt="Hourglass with gut‑shaped sand flowing upward and glowing capsule, symbolizing rejuvenation.">
+</a>
+
+<a href="https://gutcare.fit/14-day/04-why-day4-gut-gamechanger" class="product-card" target="_blank">
+<img src="https://imgur.com/R9ll0WW.jpg" alt="Leafy plant stopwatch set to 4 with cheering gut cells and confetti of fruits and veggies.">
+</a>
+
+</div>
+</section>
 
     <footer>
       <h3>FAQ & Disclaimer</h3>
