--- a/Mitolyn/09-your-metabolism-has-a-switch/index.html
+++ b/Mitolyn/09-your-metabolism-has-a-switch/index.html
@@ -60,6 +60,36 @@
       font-size: 0.9rem;
       color: #000000;
     }
+
+    .related-articles {
+  padding: 2rem 0;
+  text-align: center;
+}
+
+.related-articles h2 {
+  color: #561b28;
+  font-size: 1.5rem;
+  margin-bottom: 1rem;
+}
+
+.products-grid {
+  display: flex;
+  flex-wrap: wrap;
+  justify-content: center;
+  gap: 1rem;
+}
+
+.product-card img {
+  width: 100%;
+  height: auto;
+  display: block;
+}
+
+.product-card {
+  flex: 1 1 45%;  /* Tenta ocupar 45% da largura, mas ajusta conforme o espaço */
+  max-width: 250px;
+}
+
   </style>
 </head>
 <body>
@@ -134,6 +164,25 @@
       <li>Cellular rejuvenation and detox</li>
       <li>Support for healthy aging</li>
     </ul>
+
+<section class="related-articles">
+<h2>Related Articles</h2>
+<div class="products-grid">
+
+<a href="https://gutcare.fit/mitolyn/07-the-weight-loss-plan-that-starts-in-your-cells" class="product-card" target="_blank">
+<img src="https://imgur.com/CzXBVoP.jpg" alt="A calendar flipping with tiny mitochondria growing stronger each month.">
+</a>
+
+<a href="https://gutcare.fit/prime-biome/09-feel-light-again-from-the-soil-up" class="product-card" target="_blank">
+<img src="https://imgur.com/9sAohQn.jpg" alt="Illustration of a butterfly made from leaves and roots rising from a vibrant spiral of soil, symbolizing gut healing and digestive freedom through soil-based probiotics. Bright, airy background evokes lightness and relief.">
+</a>
+
+<a href="https://gutcare.fit/14-day/07-sneaky-bloat-triggers" class="product-card" target="_blank">
+<img src="https://imgur.com/Pm4nfCB.jpg" alt="Whack‑a‑mole board of nuts and nightshades labeled bloat being tapped by probiotic hammer, with fresh swaps around.">
+</a>
+
+</div>
+</section>
 
     <footer>
       <h3>FAQ & Disclaimer</h3>
