--- a/prime-biome/03-confidence-starts-from-your-gut/index.html
+++ b/prime-biome/03-confidence-starts-from-your-gut/index.html
@@ -69,6 +69,34 @@
     a {
       color: #00e0ff;
     }
+    .related-articles {
+  padding: 2rem 0;
+  text-align: center;
+}
+
+.related-articles h2 {
+  color: #fcd34d;
+  font-size: 1.5rem;
+  margin-bottom: 1rem;
+}
+
+.products-grid {
+  display: flex;
+  flex-wrap: wrap;
+  justify-content: center;
+  gap: 1rem;
+}
+
+.product-card img {
+  width: 100%;
+  height: auto;
+  display: block;
+}
+
+.product-card {
+  flex: 1 1 45%;  /* Tenta ocupar 45% da largura, mas ajusta conforme o espaço */
+  max-width: 300px;
+}
   </style>
 </head>
 <body>
@@ -150,6 +178,25 @@
       <img src="https://imgur.com/Sfv2abx.jpg" alt="PrimeBiome official guarantee and bottles" class="final-image" loading="lazy">
     </a>
   </main>
+
+<section class="related-articles">
+<h2>Related Articles</h2>
+<div class="products-grid">
+
+<a href="https://gutcare.fit/prime-biome/01-lions-mane-benefits" class="product-card" target="_blank">
+<img src="https://imgur.com/D9btGay.jpg" alt="Whimsical flat illustration of a lion with a mushroom-shaped mane, representing the brain and body benefits of Lion’s Mane supplement.">
+</a>
+
+<a href="https://gutcare.fit/mitolyn/02-undercharged-body" class="product-card" target="_blank">
+<img src="https://imgur.com/nOmBltb.jpg" alt="A smartphone icon with a 1% battery symbol, transitioning to 100% powered by glowing mitochondria.">
+</a>
+
+<a href="https://gutcare.fit/14-day/09-top-5-qa-digestive-reset" class="product-card" target="_blank">
+<img src="https://imgur.com/7YwykfF.jpg" alt="Speech bubbles with Q&A snippets above gut icon connected by vine‑like probiotic strands.">
+</a>
+
+</div>
+</section>
 
   <footer>
     <h3>Frequently Asked Questions</h3>
