--- a/prime-biome/07-7‑day-primebiome-experiment/index.html
+++ b/prime-biome/07-7‑day-primebiome-experiment/index.html
@@ -69,6 +69,36 @@
     a {
       color: #00e0ff;
     }
+
+    .related-articles {
+  padding: 2rem 0;
+  text-align: center;
+}
+
+.related-articles h2 {
+  color: #fcd34d;
+  font-size: 1.5rem;
+  margin-bottom: 1rem;
+}
+
+.products-grid {
+  display: flex;
+  flex-wrap: wrap;
+  justify-content: center;
+  gap: 1rem;
+}
+
+.product-card img {
+  width: 100%;
+  height: auto;
+  display: block;
+}
+
+.product-card {
+  flex: 1 1 45%;  /* Tenta ocupar 45% da largura, mas ajusta conforme o espaço */
+  max-width: 300px;
+}
+
   </style>
 </head>
 <body>
@@ -132,6 +162,25 @@
       <img src="https://imgur.com/Sfv2abx.jpg" alt="PrimeBiome bottles with satisfaction guarantee banner" class="final-image" loading="lazy" />
     </a>
   </main>
+
+<section class="related-articles">
+<h2>Related Articles</h2>
+<div class="products-grid">
+
+<a href="https://gutcare.fit/prime-biome/05-busy-life" class="product-card" target="_blank">
+<img src="https://imgur.com/PL4Wzpa.jpg" alt="Stopwatch face as capsule ticking, with bloated figure disappearing, symbolizing quick gut reset.">
+</a>
+
+<a href="https://gutcare.fit/mitolyn/07-the-weight-loss-plan-that-starts-in-your-cells" class="product-card" target="_blank">
+<img src="https://imgur.com/CzXBVoP.jpg" alt="A calendar flipping with tiny mitochondria growing stronger each month.">
+</a>
+
+<a href="https://gutcare.fit/14-day/07-sneaky-bloat-triggers" class="product-card" target="_blank">
+<img src="https://imgur.com/Pm4nfCB.jpg" alt="Whack‑a‑mole board of nuts and nightshades labeled bloat being tapped by probiotic hammer, with fresh swaps around.">
+</a>
+
+</div>
+</section>
 
   <footer>
     <h3>FAQs & Disclaimer</h3>
