--- a/prime-biome/10-bloated-and-exhausted-reset-your-gut/index.html
+++ b/prime-biome/10-bloated-and-exhausted-reset-your-gut/index.html
@@ -69,6 +69,36 @@
     a {
       color: #00e0ff;
     }
+
+    .related-articles {
+  padding: 2rem 0;
+  text-align: center;
+}
+
+.related-articles h2 {
+  color: #fcd34d;
+  font-size: 1.5rem;
+  margin-bottom: 1rem;
+}
+
+.products-grid {
+  display: flex;
+  flex-wrap: wrap;
+  justify-content: center;
+  gap: 1rem;
+}
+
+.product-card img {
+  width: 100%;
+  height: auto;
+  display: block;
+}
+
+.product-card {
+  flex: 1 1 45%;  /* Tenta ocupar 45% da largura, mas ajusta conforme o espaço */
+  max-width: 300px;
+}
+
   </style>
 </head>
 <body>
@@ -135,6 +165,25 @@
       <img src="https://imgur.com/Sfv2abx.jpg" alt="PrimeBiome bottles with satisfaction guarantee banner" class="final-image" loading="lazy">
     </a>
   </main>
+
+<section class="related-articles">
+<h2>Related Articles</h2>
+<div class="products-grid">
+
+<a href="https://gutcare.fit/prime-biome/07-7‑day-primebiome-experiment/" class="product-card" target="_blank">
+<img src="https://imgur.com/W2mxLzR.jpg" alt="Lab notebook with gut data charts and Primebiome capsule markers on days 1 and 7.">
+</a>
+
+<a href="https://gutcare.fit/mitolyn/01-unlock-your-bodys-real-fat-burning-power" class="product-card" target="_blank">
+<img src="https://imgur.com/SXAzKg7.jpg" alt="A woman silhouette with radiant mitochondria inside, lighting up the torso like glowing embers.">
+</a>
+
+<a href="https://gutcare.fit/14-day/01-ditch-fads-embrace-real-results" class="product-card" target="_blank">
+<img src="https://imgur.com/r6Ds2Ng.jpg" alt="Person removing posters of fad diets from wall to reveal blooming greens and probiotics.">
+</a>
+
+</div>
+</section>
 
   <footer>
     <h3>FAQs & Medical Disclaimer</h3>
